--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -8,10 +8,28 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
-  update-readme:
+  update-Readme:
     name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@master # this action name
+      - uses: anmol098/waka-readme-stats@master
         with:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          DEBUG_LOGGING: True
+          SHOW_COMMIT: False
+          SHOW_DAYS_OF_WEEK: True
+          SHOW_EDITORS: True
+          SHOW_LANGUAGE: True
+          SHOW_LANGUAGE_PER_REPO: True
+          SHOW_LINES_OF_CODE: True
+          SHOW_LOC_CHART: False
+          SHOW_OS: True
+          SHOW_PROFILE_VIEWS: False
+          SHOW_PROJECTS: True
+          SHOW_SHORT_INFO: False
+          SHOW_TIMEZONE: True
+          SHOW_TOTAL_CODE_TIME: True
+          SHOW_UPDATED_DATE: True
+          SYMBOL_VERSION: 2
+          UPDATED_DATE_FORMAT: "%d/%m/%Y %H:%M:%S"
