--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -16,3 +16,6 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
+          IGNORED_LANGUAGES: Markdown
+          SHOW_TIME: true
+          SHOW_TOTAL: true
